# nrs_media

./: README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nrs_hand_teleop/lib/nrs_hand_teleop/: hand_teleop_node
install/nrs_hand_teleop/share/nrs_hand_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nrs_media_bringup/share/nrs_media_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nrs_mediapipe/lib/nrs_mediapipe/: realsense_mediapipe_pose
install/nrs_mediapipe/share/nrs_mediapipe/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/face_gesture/: package.xml  setup.cfg  setup.py
src/nrs_hand_teleop/: package.xml  setup.cfg  setup.py
src/nrs_hand_teleop/nrs_hand_teleop/: hand_teleop_node.py
src/nrs_media_bringup/: package.xml  setup.cfg  setup.py
src/nrs_mediapipe/: package.xml  setup.cfg  setup.py
src/nrs_mediapipe/nrs_mediapipe/: realsense_mediapipe_pose.py
